updated serve.js for feedback form

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ RAZORPAY_KEY_ID=
 RAZORPAY_KEY_SECRET=
 #RAZORPAY_KEY_ID=temp_id
 #RAZORPAY_KEY_SECRET=temp_secret
+EMAIL_USER=manir@floracarbon.ai
+EMAIL_PASS=lkti hphs nfhq myjv
